--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
     background-color: #f0f0f0;
     --highlite: lime;
     font-size: clamp(16px, 1vw, 24px);
+    width: 100vw;
+    overflow-x: hidden;
+    text-rendering: optimizeSpeed;
 }
 
 p {
@@ -34,9 +37,7 @@ img {
 
 .pair {
     position: relative;
-    height: 60vh;
-    width: 100vw;
-    overflow-x: hidden;
+    height: 70vh;
 }
 
 .pair .box:nth-of-type(2) {
@@ -80,11 +81,11 @@ img {
 }
 
 .animate-right {
-    animation: slide-right 20s ease-in-out infinite;
+    animation: slide-right 20s cubic-bezier(0.4, 0, 0.2, 1) infinite;
 }
 
 .animate-left {
-    animation: slide-left 20s ease-in-out infinite;
+    animation: slide-left 20s cubic-bezier(0.4, 0, 0.2, 1) infinite;
 }
 
 .line {
