--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ a {
     padding: 0px 5px;
 }
 
-img {
+img,
+video {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -37,20 +38,31 @@ img {
 
 .pair {
     position: relative;
-    height: 100vh;
+    height: 70vh;
 }
 
 .pair .box:nth-of-type(2) {
     /* z-index: 100; */
 }
 
+#svgContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    text-rendering: optimizeSpeed;
+}
+
 .box {
     min-width: 200px;
     position: absolute;
     background-color: white;
-    border: 4px solid var(--highlite);
+    border: 4px solid var(--highlite); 
     transform-origin: 50% 50%;
 }
+
 
 @keyframes slide-right {
     0% {
@@ -88,12 +100,11 @@ img {
     animation: slide-left 20s cubic-bezier(0.4, 0, 0.2, 1) infinite;
 }
 
-.line {
-    position: absolute;
-    height: 4px;
-    background-color: black;
-    background-color: var(--highlite);
+line {
+    stroke: var(--highlite);
     pointer-events: none;
+    stroke-linecap: round;
+    stroke-linejoin: bevel;
 }
 
 ::selection {
@@ -114,12 +125,12 @@ img {
     }
 
     .box {
-        min-width: 200px;
+        min-width: 60% !important;
         height: fit-content !important;
     }
 
     .pair {
-        /* height: 80vh; */
+        height: 80vh;
     }
 
 }
