--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ video {
     min-width: 200px;
     position: absolute;
     background-color: white;
-    border: 4px solid var(--highlite); 
+    border: 4px solid; 
     transform-origin: 50% 50%;
 }
 
@@ -102,6 +102,7 @@ video {
 
 line {
     stroke: var(--highlite);
+    stroke: black;
     pointer-events: none;
     stroke-linecap: round;
     stroke-linejoin: bevel;
