--- a/style.css
+++ b/style.css
@@ -59,7 +59,8 @@ video {
     min-width: 200px;
     position: absolute;
     background-color: white;
-    border: 4px solid; 
+    border: 2px solid;
+    box-shadow: 0px 0px 0px 2px black;
     transform-origin: 50% 50%;
 }
 
