--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ video {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    white-space: none;
+    display: block;
 }
 
 .container {
@@ -39,6 +41,10 @@ video {
 .pair {
     position: relative;
     height: 70vh;
+
+    position: unset !important;
+    height: fit-content;
+    margin: 20px;
 }
 
 .pair .box:nth-of-type(2) {
@@ -62,6 +68,9 @@ video {
     border: 2px solid;
     box-shadow: 0px 0px 0px 2px black;
     transform-origin: 50% 50%;
+
+    position: unset !important;
+    margin: 20px;
 }
 
 
@@ -81,17 +90,18 @@ video {
 
 @keyframes slide-left {
     0% {
-        margin-left: 0%;
+        margin-left: 50%;
     }
 
     50% {
-        margin-left: -50%;
+        margin-left: 0;
     }
 
     100% {
-        margin-left: 0%;
+        margin-left: 50%;
     }
 }
+
 
 .animate-right {
     animation: slide-right 20s cubic-bezier(0.4, 0, 0.2, 1) infinite;
@@ -127,12 +137,6 @@ line {
     }
 
     .box {
-        min-width: 60% !important;
-        height: fit-content !important;
+        min-width: 150px !important;
     }
-
-    .pair {
-        height: 80vh;
-    }
-
 }
