--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+html {
+    --highlite: lime;
+    background-color: var(--highlite);
+}
+
 body {
     font-family: Inter, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f0f0f0;
-    --highlite: lime;
     font-size: clamp(14px, 1vw, 24px);
     width: 100vw;
     overflow-x: hidden;
@@ -42,11 +46,7 @@ video {
     position: relative;
     height: 70vh;
     height: fit-content;
-    margin: 20px;
-}
-
-.pair .box:nth-of-type(2) {
-    /* z-index: 100; */
+    padding: 10px;
 }
 
 #svgContainer {
@@ -65,7 +65,6 @@ video {
     border: 2px solid;
     box-shadow: 0px 0px 0px 2px black;
     transform-origin: 50% 50%;
-
     margin: 20px;
 }
 
@@ -129,6 +128,16 @@ line {
     background-color: var(--highlite);
 }
 
+
+.info {
+    display: flex;
+    gap: 10px;
+    background-color: white;
+}
+
+.info div {
+    max-width: 300px;
+}
 
 @font-face {
     font-family: inter;
