--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ line {
     }
 
     .box {
-        width: 100% !important;
+        max-width: 100% !important;
         height: fit-content !important;
     }
 
