--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ line {
 
 @media only screen and (max-width: 800px) {
     .container {
-        margin-bottom: 30vh;
+        /* margin-bottom: 30vh; */
         overflow-x: hidden;
     }
 
