--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
     --highlite: lime;
+    --stroke: black;
     background-color: var(--highlite);
     width: 100%;
     height: 100%;
@@ -67,8 +68,8 @@ video {
 .box {
     min-width: 200px;
     background-color: white;
-    border: 2px solid;
-    box-shadow: 0px 0px 0px 2px black;
+    border: 2px solid var(--stroke);
+    box-shadow: 0px 0px 0px 2px var(--stroke);
     transform-origin: 50% 50%;
     margin: 20px;
 }
@@ -122,7 +123,7 @@ video {
 
 line {
     stroke: var(--highlite);
-    stroke: black;
+    stroke: var(--stroke);
     pointer-events: none;
     stroke-linecap: round;
     stroke-linejoin: bevel;
