--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+
 html {
     --highlite: lime;
     --stroke: black;
+    --stroke-width: 2;
+
     background-color: var(--highlite);
     width: 100%;
     height: 100%;
@@ -10,11 +13,10 @@ body {
     font-family: Inter, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: white;
+    background-color: #f0f0f0;
     font-size: clamp(14px, 1vw, 24px);
     width: 100vw;
     height: 100%;
-    overflow-x: hidden;
     text-rendering: optimizeSpeed;
 }
 
@@ -35,105 +37,70 @@ img,
 video {
     width: 100%;
     height: 100%;
+    padding: 0;
+    margin: 0;
     object-fit: cover;
-    white-space: none;
-    display: block;
 }
 
 .container {
     position: relative;
     width: 100vw;
-    overflow: hidden;
-    /* height: 100vh; */
-}
-
-.pair {
-    position: relative;
-    height: 70vh;
-    height: fit-content;
-    padding: 10px;
-    background-color: #f0f0f0;
 }
 
 #svgContainer {
+    position: relative;
+    width: 100vw;
+    height: 80vh;
+    min-height: 650px;
+    display: block;
+    pointer-events: none;
+}
+
+.overlay {
     position: absolute;
+    pointer-events: none;
+}
+
+.overlay-text {
+    width: 300px;
+    height: 200px;
     top: 0;
     left: 0;
+    transform: translate(20px, 150px) rotate(-25deg);
+    transform-origin: top left;
+    background-color: white;
+}
+
+.overlay-video {
+    width: 65%;
+    height: 50vh;
+    top: 250px;
+    left: 30%;
+    background-color: white;
+}
+
+.overlay-video video {
     width: 100%;
     height: 100%;
-    pointer-events: none;
-    text-rendering: optimizeSpeed;
+    object-fit: cover;
 }
 
-.box {
-    min-width: 200px;
-    background-color: white;
-    border: 2px solid var(--stroke);
-    box-shadow: 0px 0px 0px 2px var(--stroke);
-    transform-origin: 50% 50%;
-    margin: 20px;
-}
-
-.box p:last-of-type {
-    padding-bottom: 50px;
-}
-
-
-.top {
-    position: relative;
-    z-index: 100;
-}
-
-@keyframes slide-right {
-    0% {
-        margin-left: 0;
-    }
-
-    50% {
-        margin-left: 50%;
-    }
-
-    100% {
-        margin-left: 0;
-    }
-}
-
-@keyframes slide-left {
-    0% {
-        margin-left: 50%;
-    }
-
-    50% {
-        margin-left: 0;
-    }
-
-    100% {
-        margin-left: 50%;
-    }
-}
-
-
-.animate-right {
-    animation: slide-right 30s infinite;
-}
-
-.animate-left {
-    animation: slide-left 30s infinite;
+rect {
+    stroke: var(--stroke);
+    stroke-width: var(--stroke-width);
+    fill: none;
 }
 
 line {
-    stroke: var(--highlite);
     stroke: var(--stroke);
+    stroke-width: var(--stroke-width);
     pointer-events: none;
-    stroke-linecap: round;
-    stroke-linejoin: bevel;
 }
 
 ::selection {
     color: black;
     background-color: var(--highlite);
 }
-
 
 .info {
     display: flex;
@@ -156,21 +123,21 @@ line {
     src: url("assets/inter.woff2");
 }
 
+.rotate {
+    transform: translate(20px, 150px) rotate(-25deg);
+    transform-origin: top left;
+}
 
 @media only screen and (max-width: 800px) {
-    .container {
-        /* margin-bottom: 30vh; */
-        overflow-x: hidden;
+    .rotate {
+        transform: translate(0px, 120px) rotate(-25deg) !important;
     }
 
-    .box {
-        max-width: 100% !important;
-        height: fit-content !important;
+    .overlay-text {
+        transform: translate(0px, 120px) rotate(-25deg) !important;
     }
 
-    .box:not(.animate-right):not(.animate-left) {
-        margin-left: 0 !important;
+    #svgContainer {
+        height: 80vh;
     }
-
-
 }
