--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f0f0f0;
-    font-size: clamp(14px, 1vw, 24px);
+    font-size: clamp(16px, 1vw, 26px);
+    line-height: clamp(18px, 1.2vw, 28px);
     width: 100vw;
     height: 100%;
-    text-rendering: optimizeSpeed;
+    text-rendering: geometricprecision;
 }
 
 p {
