--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     font-family: space, Inter, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
+    background-color: white;
     font-size: clamp(16px, 1vw, 26px);
     line-height: clamp(20px, 1.4vw, 30px);
     width: 100vw;
@@ -45,6 +45,7 @@ video {
 .container {
     position: relative;
     width: 100vw;
+    background-color: #f0f0f0;
 }
 
 #svgContainer {
