--- a/style.css
+++ b/style.css
@@ -13,8 +13,9 @@ body {
     margin: 0;
     padding: 0;
     background-color: white;
-    font-size: clamp(16px, 1vw, 26px);
-    line-height: clamp(20px, 1.4vw, 30px);
+    font-size: clamp(18px, 1.2vw, 28px);
+    line-height: clamp(22px, 1.4vw, 32px);
+    /* hyphens: auto; */
     width: 100vw;
     height: 100%;
     text-rendering: geometricprecision;
@@ -113,10 +114,11 @@ line {
 
 .info div {
     flex: 1;
-    min-width: 150px;
-    max-width: 300px;
+    min-width: 180px;
+    max-width: 640px;
     height: 100%;
 }
+
 
 @font-face {
     font-family: inter;
