--- a/style.css
+++ b/style.css
@@ -34,6 +34,14 @@ a {
     padding: 0px 5px;
 }
 
+a.link {
+    background-color: unset;
+    text-decoration: underline;
+    text-decoration-color: var(--highlite);
+    text-underline-offset: 2px;
+    padding: 0;
+}
+
 img,
 video {
     width: 100%;
@@ -55,6 +63,7 @@ video {
     height: 620px;
     display: block;
     pointer-events: none;
+
 }
 
 .overlay {
@@ -70,6 +79,7 @@ video {
     transform: translate(0px, 128px) rotate(-25deg);
     transform-origin: top left;
     background-color: white;
+    pointer-events: all;
 }
 
 .overlay-video {
