--- a/style.css
+++ b/style.css
@@ -10,11 +10,12 @@ html {
 
 body {
     font-family: space, Inter, sans-serif;
+    font-feature-settings: "liga", "ss03", "ss02";
     margin: 0;
     padding: 0;
     background-color: white;
-    font-size: clamp(18px, 1.2vw, 28px);
-    line-height: clamp(22px, 1.4vw, 32px);
+    font-size: clamp(16px, 1vw, 20px);
+    line-height: clamp(20px, 1.2vw, 24px);
     /* hyphens: auto; */
     width: 100vw;
     height: 100%;
@@ -127,6 +128,12 @@ line {
     background-color: white;
 }
 
+@media (max-width: 640px) {
+    .info {
+        display: block;
+    }
+}
+
 .info div {
     flex: 1;
     min-width: 180px;
@@ -147,9 +154,10 @@ ol {
     font-size: .9rem;
 }
 
-ol, li {
+ol,
+li {
     margin-block-start: 0;
-    margin-left: 5px;
+    margin-left: 10px;
     padding: 0;
     margin-bottom: 10px;
 }
