--- a/style.css
+++ b/style.css
@@ -1,182 +1,208 @@
 html {
-    --highlite: lime;
-    --stroke: black;
-    --stroke-width: 2;
+  --highlite: lime;
+  --stroke: black;
+  --stroke-width: 2;
 
-    background-color: var(--highlite);
-    width: 100%;
-    height: 100%;
+  background-color: var(--highlite);
+  width: 100%;
+  height: 100%;
 }
 
 body {
-    font-family: space, Inter, sans-serif;
-    font-feature-settings: "liga", "ss03", "ss02";
-    margin: 0;
-    padding: 0;
-    background-color: white;
-    font-size: clamp(16px, 1vw, 20px);
-    line-height: clamp(20px, 1.2vw, 24px);
-    /* hyphens: auto; */
-    width: 100vw;
-    height: 100%;
-    text-rendering: geometricprecision;
+  font-family: space, Inter, sans-serif;
+  font-feature-settings: "liga", "ss03", "ss02";
+  margin: 0;
+  padding: 0;
+  background-color: white;
+  font-size: clamp(16px, 1vw, 20px);
+  line-height: clamp(20px, 1.2vw, 24px);
+
+  width: 100vw;
+  height: 100%;
+  text-rendering: geometricprecision;
 }
 
 h4 {
-    margin: 0;
-    padding: 10px;
+  margin: 0;
+  padding: 10px;
 }
 
 p {
-    margin: 0;
-    padding: 10px;
+  margin: 0;
+  padding: 10px;
 }
 
 a {
-    color: black;
-    text-decoration: none;
-    background-color: var(--highlite);
-    border-radius: 20px;
-    padding: 0px 5px;
+  color: black;
+  text-decoration: none;
+  background-color: var(--highlite);
+  border-radius: 20px;
+  padding: 0px 5px;
 }
 
 a.link {
-    background-color: unset;
-    text-decoration: underline;
-    text-decoration-color: var(--highlite);
-    text-underline-offset: 2px;
-    padding: 0;
+  background-color: unset;
+  text-decoration: underline;
+  text-decoration-color: var(--highlite);
+  text-underline-offset: 2px;
+  padding: 0;
 }
 
 img,
 video {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  object-fit: cover;
 }
 
 .container {
-    position: relative;
-    width: 100vw;
-    background-color: #f0f0f0;
+  position: relative;
+  width: 100vw;
+  background-color: #f0f0f0;
 }
 
 #svgContainer {
-    position: relative;
-    width: 100vw;
-    height: 620px;
-    display: block;
-    pointer-events: none;
-
+  position: relative;
+  width: 100vw;
+  height: 620px;
+  display: block;
+  pointer-events: none;
 }
 
 .overlay {
-    position: absolute;
-    pointer-events: none;
+  position: absolute;
+  pointer-events: none;
 }
 
 .overlay-text {
-    width: 300px;
-    height: 200px;
-    top: 0;
-    left: 0;
-    transform: translate(0px, 128px) rotate(-25deg);
-    transform-origin: top left;
-    background-color: white;
-    pointer-events: all;
+  width: 300px;
+  height: 200px;
+  top: 0;
+  left: 0;
+  transform: translate(0px, 128px) rotate(-25deg);
+  transform-origin: top left;
+  background-color: white;
+  pointer-events: all;
 }
 
 .overlay-video {
-    width: 65%;
-    height: 400px;
-    top: 200px;
-    left: 30%;
-    background-color: white;
+  width: 65%;
+  height: 400px;
+  top: 200px;
+  left: 30%;
+  background-color: white;
 }
 
 .overlay-video video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 rect {
-    stroke: var(--stroke);
-    stroke-width: var(--stroke-width);
-    fill: none;
+  stroke: var(--stroke);
+  stroke-width: var(--stroke-width);
+  fill: none;
 }
 
 line {
-    stroke: var(--stroke);
-    stroke-width: var(--stroke-width);
-    pointer-events: none;
+  stroke: var(--stroke);
+  stroke-width: var(--stroke-width);
+  pointer-events: none;
 }
 
 ::selection {
-    color: black;
-    background-color: var(--highlite);
+  color: black;
+  background-color: var(--highlite);
 }
 
 .info {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: stretch;
-    height: 100%;
-    gap: 10px;
-    background-color: white;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  height: 100%;
+  gap: 10px;
+  background-color: white;
+  padding-bottom: 50px;
 }
 
 @media (max-width: 640px) {
-    .info {
-        display: block;
-    }
+  .info {
+    display: block;
+  }
 }
 
 .info div {
-    flex: 1;
-    min-width: 180px;
-    max-width: 640px;
-    height: 100%;
+  flex: 1;
+  min-width: 180px;
+  max-width: 640px;
+  height: 100%;
 }
 
 .prototype-url {
-    position: relative;
-    bottom: 2em;
-    left: .5em;
-    pointer-events: all;
+  position: relative;
+  bottom: 2em;
+  left: 0.5em;
+  pointer-events: all;
 }
 
-
-
 ol {
-    font-size: .9rem;
+  font-size: 0.9rem;
 }
 
 ol,
 li {
-    margin-block-start: 0;
-    margin-left: 10px;
-    padding: 0;
-    margin-bottom: 10px;
+  margin-block-start: 0;
+  margin-left: 10px;
+  padding: 0;
+  margin-bottom: 10px;
 }
 
+.carousel {
+  background-color: #ccc;
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  gap: 5px;
+  scrollbar-width: thin;
+  scrollbar-color: #ccc transparent;
+  padding: 5px 0;
+  width: 100vw;
+  box-sizing: border-box;
+}
 
-@font-face {
-    font-family: space;
-    src: url("assets/SpaceGrotesk-Regular.woff2");
-    font-weight: normal;
+.carousel img {
+  flex: 0 0 350px;
+  height: 420px;
+  object-fit: cover;
+  scroll-snap-align: start;
+  border-radius: 3px;
+  background: #fff;
+}
+
+.carousel::-webkit-scrollbar {
+  height: 4px;
+}
+
+.carousel::-webkit-scrollbar-thumb {
+  background: black;
 }
 
 @font-face {
-    font-family: space;
-    src: url("assets/SpaceGrotesk-Medium.woff2");
-    font-weight: bold;
+  font-family: space;
+  src: url("assets/SpaceGrotesk-Regular.woff2");
+  font-weight: normal;
+}
 
+@font-face {
+  font-family: space;
+  src: url("assets/SpaceGrotesk-Medium.woff2");
+  font-weight: bold;
 }
 
 .rotate {
-    transform: translate(0px, 128px) rotate(-25deg);
-    transform-origin: top left;
+  transform: translate(0px, 128px) rotate(-25deg);
+  transform-origin: top left;
 }
