--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,7 @@ html {
   --stroke: black;
   --stroke-width: 2;
 
-  background-color: var(--highlite);
+  background-color: gainsboro;
   width: 100%;
   height: 100%;
 }
@@ -22,7 +22,6 @@ body {
   height: 100%;
   text-rendering: geometricprecision;
   overflow-x: hidden;
-  max-width: 1920px;
   margin: auto;
 }
 
@@ -134,4 +133,8 @@ a.link:hover {
 
 p {
   margin-bottom: 1rem;
+}
+
+.max-w-480 {
+  position: relative;
 }
